# TransMeasPy

./: .copier-answers.yml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  DELIVERABLES_CHECKLIST.md  ISSUES_FROM_SCOPE.md  README.dev.md  README.md  README_ISSUES.md  generate_issues.py  project_setup.md  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: architecture.yml  metadata_schema.yml  runtime_control.yml  safety_limits.yml
.github/workflows/: build.yml  documentation.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
github_issues/: create_cli_interface_and_usage_examples.md  define_metadata_schema_for_instruments.md  define_metadata_schema_for_samples_and_devices.md  develop_testing_strategy_and_framework.md  implement_comprehensive_error_handling_and_recovery.md  implement_data_model_with_independent_dependent_variables.md  implement_instrument_safety_limits_and_pre-checks.md  implement_runtime_parameter_adaptation.md  implement_runtime_safety_monitoring_and_interlocks.md  implement_safe_pause_resume_stop_for_measurements.md  review_current_quantify_vs_qcodes_architecture_decision.md  specify_minimum_qcodes_version_and_dependencies.md
notebooks/: test_L_type_rapid.ipynb  test_ivvi_rack.ipynb  test_station.ipynb
src/transmeaspy/: __init__.py  my_module.py
src/transmeaspy/analyses/: IVAnalysis.py  iv_analysis.py
src/transmeaspy/measurements/: base_measurement.py  iv.py
tests/: station_test.yaml  test.ipynb  test_Keithley_2182a.py  test_L_type_rapid.ipynb  test_my_module.py
transmeaspy/local_qcodes/instrument/sims/: Keithley_2128a.yaml
transmeaspy/local_qcodes/instrument_drivers/Keithley/: Keithley_2182a.py
transmeaspy/local_qcodes/instrument_drivers/Kiutra/: L_type_rapid.py
transmeaspy/local_qcodes/instrument_drivers/QuTech/: IVVI_rack.py
transmeaspy/local_qcodes/measurements/: BaseMeasurement.py  IV.py
transmeaspy/local_qcodes/utilities/: utilities.py
